<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CloudPress</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="user1">User ID</string>
    <string name="Password1">Password</string>
    <string name="Login1">Login</string>
    <string name="SignUp1">Sign Up</string>
    <string name="title_activity_second">Second</string>
    <string name="username">User Name</string>
    <string name="password1">password</string>
    <string name="password2">password</string>
    <string name="email">Email id</string>
    <string name="question">Secret Question</string>
    <string name="answer">Secret Answer</string>
    <string name="mailId">E-mail ID</string>
    <string name="signup">Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="activity">Activity</string>
    <string name="view">View Pics</string>
    <string name="upload">Upload</string>
    <string name="download">Download</string>
    <string name="camera">Camera</string>
    <string name="forgot">Forgot Password</string>
    <string name="click">Click</string>
    <string name="title_activity_app_tasks">AppTasks</string>
    <string name="encrypt">Encrypt</string>
    <string name="decrypt">Decrypt</string>
    <string name="title_activity_registeration">Registeration</string>
    <string name="title_activity_welcome_user">Welcome_user</string>
    <string name="select_photo">Select Photo</string>
    <string name="title_activity_own_cloud">OwnCloud</string>

</resources>
